[package]
authors = ["Bryan"]
edition = "2018"
readme = "README.md"
name = "foobear"
version = "0.1.0"

[dependencies]
embedded-hal = "1.0.0"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rtic = "1.1.4"
panic-rtt-target = { version = "0.1.3" }
rtt-target = { version = "0.5.0" }
systick-monotonic = "1.0.0"
cortex-m-semihosting = "0.5.0"


[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "0.10.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "foobear"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
